Changelog
=========

2.2 - (2021-11-17)
---------------------------
* Change: Fix resolveuid
  [razvanMiu]
* Change: Make it work with Plone 6 / pip install
  [avoinea refs #139557]

2.1 - (2021-11-03)
---------------------------
* Change: Removed SerializeSiteRootToJson -> use the serializer from plone.restapi
  [razvanMiu]

2.0 - (2021-10-06)
---------------------------
* Change: Fix interface for data_query field
  [razvanMiu]

1.9 - (2021-09-29)
---------------------------
* Reinstate porlets service from older plone.restapi
  [razvanMiu]

1.8 - (2021-09-22)
---------------------------
* Change: remove dependency on eea.volto.slate [valipod]
* Change: add minimum version on plone.restapi [valipod]

1.7 - (2021-09-16)
---------------------------
* Change: Collection fullobject
  [razvanMiu]

1.6 - (2021-06-29)
---------------------------
* Change: Develop #135777
  [alecghica]

1.5 - (2021-05-07)
---------------------------
* Move Discodata connector adapter to eea.api.dataconnector
  [tiberiuichim, razvanMiu]

1.4 - (2020-05-13)
---------------------------
* Change: Tests and Linters
  [valipod]

1.3 - (2020-03-03)
---------------------------
* fix for importing from zexp [dumitval refs #113196]

1.2 - (2020-02-26)
---------------------------
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

1.1 - (2020-02-24)
---------------------------
* Change: Develop
  [tiberiuichim]

1.1 - (2020-02-24)
---------------------------
* Feature: implemented a IBlockValidator adapter to automatically
  cleanup blocks
  [tiberiuichim]

1.0 - (2020-02-13)
---------------------------
* Change: Implement automatic release with gitflow
  [valentinab25 refs #110159]

1.0a2 - (2020-02-13)
---------------------------
* Use expand.localnavigation.depth for locationavigation endpoint
  [tiberiuichim]

1.0a1 (2020-02-13)
---------------------------
* Initial release.
  [tiberiuichim]